--- a/Karthikeyan_GenAI_03Feb.ipynb
+++ b/Karthikeyan_GenAI_03Feb.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOsZqMCcsh6JoUaqafO2gS4",
+      "authorship_tag": "ABX9TyMscRoMIayGcfuXoP/Y8PNU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -52,9 +52,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yrsh3d9jNZWk",
-        "outputId": "8596aea2-a66e-4d60-c6f5-0f41c1dabe93"
+        "outputId": "2e96c449-0ac8-4136-bb4c-bd362bae96c9"
       },
-      "execution_count": 122,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -65,18 +65,22 @@
             "Reading state information... Done\n",
             "wget is already the newest version (1.21.2-2ubuntu1).\n",
             "0 upgraded, 0 newly installed, 0 to remove and 32 not upgraded.\n",
-            "--2024-02-04 17:43:00--  https://raw.githubusercontent.com/karthikeyanbu/GenAI/main/twcs.csv\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.111.133, 185.199.110.133, 185.199.108.133, ...\n",
+            "--2024-02-05 05:02:36--  https://raw.githubusercontent.com/karthikeyanbu/GenAI/main/twcs.csv\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.111.133, 185.199.108.133, 185.199.110.133, ...\n",
             "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.111.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 20787426 (20M) [text/plain]\n",
-            "Saving to: ‘twcs.csv.2’\n",
+            "Saving to: ‘twcs.csv’\n",
             "\n",
-            "twcs.csv.2          100%[===================>]  19.82M  --.-KB/s    in 0.1s    \n",
+            "twcs.csv            100%[===================>]  19.82M   115MB/s    in 0.2s    \n",
             "\n",
-            "2024-02-04 17:43:01 (148 MB/s) - ‘twcs.csv.2’ saved [20787426/20787426]\n",
+            "2024-02-05 05:02:37 (115 MB/s) - ‘twcs.csv’ saved [20787426/20787426]\n",
             "\n",
-            "Requirement already satisfied: emoji in /usr/local/lib/python3.10/dist-packages (2.10.1)\n"
+            "Collecting emoji\n",
+            "  Downloading emoji-2.10.1-py2.py3-none-any.whl (421 kB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m421.5/421.5 kB\u001b[0m \u001b[31m3.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hInstalling collected packages: emoji\n",
+            "Successfully installed emoji-2.10.1\n"
           ]
         }
       ]
@@ -90,12 +94,14 @@
         "import re\n",
         "import nltk\n",
         "from nltk.corpus import stopwords\n",
-        "import emoji"
+        "import emoji\n",
+        "import textblob\n",
+        "from textblob import TextBlob"
       ],
       "metadata": {
         "id": "MXdBnZtCNR-J"
       },
-      "execution_count": 123,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -108,15 +114,8 @@
       "metadata": {
         "id": "PQVxgidd7ZHP"
       },
-      "execution_count": 124,
+      "execution_count": 4,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "Ga-BSR3l9oWI"
-      }
     },
     {
       "cell_type": "code",
@@ -129,9 +128,9 @@
           "height": 380
         },
         "id": "nsbiVaRV-ab1",
-        "outputId": "46226f23-c7e4-4147-ae2f-9522e34d647a"
+        "outputId": "09fcdd4b-0113-4478-885b-a550756d9863"
       },
-      "execution_count": 125,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -160,7 +159,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-b8f970f3-ad31-4e1c-9090-86a91d81f4da\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-521828bf-b2ad-4fdf-ab09-8eda84ab6547\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -245,7 +244,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b8f970f3-ad31-4e1c-9090-86a91d81f4da')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-521828bf-b2ad-4fdf-ab09-8eda84ab6547')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -297,12 +296,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-b8f970f3-ad31-4e1c-9090-86a91d81f4da button.colab-df-convert');\n",
+              "        document.querySelector('#df-521828bf-b2ad-4fdf-ab09-8eda84ab6547 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-b8f970f3-ad31-4e1c-9090-86a91d81f4da');\n",
+              "        const element = document.querySelector('#df-521828bf-b2ad-4fdf-ab09-8eda84ab6547');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -322,8 +321,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-9a90caa1-44d1-4afe-83b6-82f21f5e1417\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-9a90caa1-44d1-4afe-83b6-82f21f5e1417')\"\n",
+              "<div id=\"df-2b53b648-6186-4cc3-9b12-7a5c226f7169\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-2b53b648-6186-4cc3-9b12-7a5c226f7169')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -442,7 +441,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-9a90caa1-44d1-4afe-83b6-82f21f5e1417 button');\n",
+              "        document.querySelector('#df-2b53b648-6186-4cc3-9b12-7a5c226f7169 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -454,7 +453,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 125
+          "execution_count": 6
         }
       ]
     },
@@ -468,9 +467,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "eH6S8ne7-mlF",
-        "outputId": "f5ec7099-d9bf-436c-ffac-231b57c6099b"
+        "outputId": "51a28afd-876c-4c49-acca-0e625174c83a"
       },
-      "execution_count": 126,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -480,7 +479,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 126
+          "execution_count": 7
         }
       ]
     },
@@ -494,9 +493,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9Z5Zksbb_8ic",
-        "outputId": "a598572c-5cca-4449-d61d-1ec117da6fa7"
+        "outputId": "1a9671d4-d28a-4059-ddbb-3a3932d2a333"
       },
-      "execution_count": 127,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -534,9 +533,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ooNDTQZ7-qMU",
-        "outputId": "db9e2be8-e079-4a9a-e69b-634bf74b302a"
+        "outputId": "41e50ec1-950b-4250-ed9a-fdebccb765d4"
       },
-      "execution_count": 129,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -557,7 +556,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 129
+          "execution_count": 9
         }
       ]
     },
@@ -571,7 +570,7 @@
       "metadata": {
         "id": "L_FGwOG8OAud"
       },
-      "execution_count": 139,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -609,7 +608,7 @@
       "metadata": {
         "id": "Xpjh7gFkAU-r"
       },
-      "execution_count": 92,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -623,7 +622,7 @@
       "metadata": {
         "id": "yZFjBO6fBOee"
       },
-      "execution_count": 93,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -637,9 +636,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "X-Ly6HjPBVC9",
-        "outputId": "1be9331e-1eda-483d-ed5e-2c4b22ba92b2"
+        "outputId": "1787d207-89dd-433d-c2a3-cb3df56467c6"
       },
-      "execution_count": 94,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -659,7 +658,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 94
+          "execution_count": 12
         }
       ]
     },
@@ -674,7 +673,7 @@
       "metadata": {
         "id": "3qCP936WCBNy"
       },
-      "execution_count": 96,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -688,9 +687,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lH2zgx12IyGY",
-        "outputId": "2ccded67-bce3-4cd4-8f61-db05216b5d5c"
+        "outputId": "afb94f25-cfde-4bef-a43a-25532c98c30e"
       },
-      "execution_count": 99,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -710,7 +709,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 99
+          "execution_count": 14
         }
       ]
     },
@@ -725,16 +724,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "C7BcqZIuJr64",
-        "outputId": "6fb5bb67-23f6-4559-906c-742eb26f8808"
+        "outputId": "d9880c20-7df8-4a55-e695-10e7f0a1e187"
       },
-      "execution_count": 115,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
             "[nltk_data] Downloading package stopwords to /root/nltk_data...\n",
-            "[nltk_data]   Package stopwords is already up-to-date!\n"
+            "[nltk_data]   Unzipping corpora/stopwords.zip.\n"
           ]
         },
         {
@@ -745,7 +744,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 115
+          "execution_count": 15
         }
       ]
     },
@@ -765,7 +764,7 @@
       "metadata": {
         "id": "CgDTwOqjJEMG"
       },
-      "execution_count": 110,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -781,7 +780,7 @@
         "id": "xiMKvt0oJf3m",
         "outputId": "0388f894-c6db-48a2-be1c-6b6a67043acc"
       },
-      "execution_count": 111,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -816,7 +815,7 @@
       "metadata": {
         "id": "dUOfFlORLVTn"
       },
-      "execution_count": 113,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -830,29 +829,29 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pyQ84gblLrvL",
-        "outputId": "392a2ae4-d947-4ae8-91a2-ab57329a5223"
+        "outputId": "57a8ad46-800f-4bc5-af3e-80ed7f5b665d"
       },
-      "execution_count": 114,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0    115712  understand  would like  assistwould ne...\n",
-              "1                                  sprintcare  propose\n",
-              "2    sprintcaresent several private messagesone  re...\n",
-              "3    115712 please send us  private messageassistcl...\n",
-              "4                                         sprintcare  \n",
-              "5    115712please send us  private message  gain  d...\n",
-              "6                     sprintcareworst customer service\n",
-              "7    115713saddening  hear please shoot us  dm  loo...\n",
-              "8    sprintcare  gonna magically change  connectivi...\n",
-              "9    115713  understand  concerns  wed like please ...\n",
+              "0    115712 i understand i would like to assist you...\n",
+              "1         sprintcare and how do you propose we do that\n",
+              "2    sprintcare i have sent several private message...\n",
+              "3    115712 please send us a private message so tha...\n",
+              "4                                     sprintcare i did\n",
+              "5    115712 can you please send us a private messag...\n",
+              "6             sprintcare is the worst customer service\n",
+              "7    115713 this is saddening to hear please shoot ...\n",
+              "8    sprintcare you gonna magically change your con...\n",
+              "9    115713 we understand your concerns and wed lik...\n",
               "Name: text, dtype: object"
             ]
           },
           "metadata": {},
-          "execution_count": 114
+          "execution_count": 18
         }
       ]
     },
@@ -867,7 +866,7 @@
       "metadata": {
         "id": "4NUnm-XKMBqh"
       },
-      "execution_count": 116,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -881,29 +880,102 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "O4PMHfpHMIVT",
-        "outputId": "18ff0371-905a-4f9d-fadf-e816ab5cfe77"
+        "outputId": "0e5d7a8f-48db-4f83-e2fd-81a9924fe2ba"
       },
-      "execution_count": 121,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0    115712  understand  would like  assistwould ne...\n",
-              "1                                  sprintcare  propose\n",
-              "2    sprintcaresent several private messagesone  re...\n",
-              "3    115712 please send us  private messageassistcl...\n",
-              "4                                         sprintcare  \n",
-              "5    115712please send us  private message  gain  d...\n",
-              "6                     sprintcareworst customer service\n",
-              "7    115713saddening  hear please shoot us  dm  loo...\n",
-              "8    sprintcare  gonna magically change  connectivi...\n",
-              "9    115713  understand  concerns  wed like please ...\n",
+              "0    115712 i understand i would like to assist you...\n",
+              "1         sprintcare and how do you propose we do that\n",
+              "2    sprintcare i have sent several private message...\n",
+              "3    115712 please send us a private message so tha...\n",
+              "4                                     sprintcare i did\n",
+              "5    115712 can you please send us a private messag...\n",
+              "6             sprintcare is the worst customer service\n",
+              "7    115713 this is saddening to hear please shoot ...\n",
+              "8    sprintcare you gonna magically change your con...\n",
+              "9    115713 we understand your concerns and wed lik...\n",
               "Name: text, dtype: object"
             ]
           },
           "metadata": {},
-          "execution_count": 121
+          "execution_count": 20
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#6 Spelling correction\n",
+        "def sentiment_calc(text):\n",
+        "    try:\n",
+        "        return TextBlob(text).correct().string\n",
+        "    except:\n",
+        "        return None"
+      ],
+      "metadata": {
+        "id": "HKlHJAEBp33P"
+      },
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "customer_df[\"text\"] = customer_df[\"text\"].apply(sentiment_calc)"
+      ],
+      "metadata": {
+        "id": "2edIDfikp4E2"
+      },
+      "execution_count": 13,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "customer_df[\"text\"].head(20)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-Mw0vToFt3sI",
+        "outputId": "4c4eead1-684d-400d-a4b3-164fb9c96bfe"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0     @115712 I understand. I would like to assist y...\n",
+              "1                                                  None\n",
+              "2                                                  None\n",
+              "3                                                  None\n",
+              "4                                                  None\n",
+              "5                                                  None\n",
+              "6                                                  None\n",
+              "7                                                  None\n",
+              "8                                                  None\n",
+              "9                                                  None\n",
+              "10                                                 None\n",
+              "11                                                 None\n",
+              "12                                                 None\n",
+              "13                                                 None\n",
+              "14                                                 None\n",
+              "15                                                 None\n",
+              "16                                                 None\n",
+              "17                                                 None\n",
+              "18                                                 None\n",
+              "19                                                 None\n",
+              "Name: text, dtype: object"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
         }
       ]
     }
